testdata/baselines/reference/submodule/compiler/typeParameterAndArgumentOfSameName1.errors.txt
typeParameterAndArgumentOfSameName1.ts(3,5): error TS2322: Type 'null' is not assignable to type 'A'.


==== typeParameterAndArgumentOfSameName1.ts (1 errors) ====
    function f<A extends Number>(A: A): A {
        var r = A.toExponential(123);
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'A'.
    }